<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="mcity.com.mcity.Signup">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"

            android:text="REGISTER"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"

            android:text="mCITY"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/orange"
            android:gravity="center"
            android:padding="@dimen/_3sdp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LIVE. WORK. SHOP"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll1"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical"

        android:paddingLeft="@dimen/_10sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_10sdp">

            <EditText
                android:id="@+id/uname_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/user_icon"
                android:drawablePadding="@dimen/_5sdp"
                android:hint="Name"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"
                android:paddingBottom="@dimen/_13sdp"
                android:singleLine="true"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp">

            <EditText
                android:id="@+id/phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/phone_icon"
                android:drawablePadding="@dimen/_5sdp"
                android:maxLength="10"
                android:hint="@string/Phonenumber"
                android:imeOptions="actionNext"
                android:paddingBottom="@dimen/_13sdp"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="@dimen/_12sdp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp">

            <EditText

                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/mail_icon"
                android:drawablePadding="@dimen/_5sdp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                android:paddingBottom="@dimen/_13sdp"
                android:singleLine="true"
                android:textSize="@dimen/_12sdp" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/registerlv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="right"

            android:orientation="horizontal">


            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:paddingRight="@dimen/_20sdp"
                android:text="Have an Account? Click to login!"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_centerVertical="true"
                style="?android:attr/progressBarStyle"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:id="@+id/submittv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/submit_icon" />

        </LinearLayout>




    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/termsreg"
            android:textSize="@dimen/_10sdp" />
    </RelativeLayout>





</RelativeLayout>