<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_18sdp"
            android:paddingLeft="@dimen/_18sdp"
            android:paddingRight="@dimen/_18sdp"
            android:paddingTop="@dimen/_18sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_10sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/location_icon"/>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/_45sdp"/>






                <!-- <AutoCompleteTextView
                     android:id="@+id/location_et_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/location_icon"
                     android:drawablePadding="@dimen/_5sdp"
                     android:hint="@string/location"
                     android:imeOptions="actionNext"
                     android:paddingBottom="@dimen/_13sdp"
                     android:inputType="textNoSuggestions"
                     android:singleLine="true"
                     android:textSize="@dimen/_12sdp" />
 -->

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:background="#d8d8d8">

            </View>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_10sdp">

                <EditText

                    android:id="@+id/landmark_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:drawableLeft="@drawable/location_icon"
                    android:drawablePadding="@dimen/_5sdp"
                    android:hint="@string/Landmark"
                    android:background="@null"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:layout_gravity="center"
                    android:singleLine="true"
                    android:textSize="@dimen/_13sdp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:background="#d8d8d8">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_10sdp">

                <EditText

                    android:id="@+id/Address_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:drawableLeft="@drawable/location_icon"
                    android:drawablePadding="@dimen/_5sdp"
                    android:hint="@string/address"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:background="@null"
                    android:maxLines="3"
                    android:layout_gravity="center"
                    android:singleLine="true"
                    android:textSize="@dimen/_13sdp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:background="#d8d8d8">

            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_15sdp">


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableLeft="@drawable/house_icon"
                        android:textSize="@dimen/_12sdp" />

                    <RadioGroup
                        android:id="@+id/radioGroup1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radio0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:button="@android:color/transparent"
                            android:checked="true"
                            android:drawableLeft="@drawable/flat_selector"
                            android:drawablePadding="@dimen/_10sdp"
                            android:padding="@dimen/_5sdp"
                            android:text="I Have a PG/Hostel"
                            android:textSize="@dimen/_10sdp" />

                        <RadioButton
                            android:id="@+id/radio2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:button="@android:color/transparent"
                            android:drawableLeft="@drawable/flat_selector"
                            android:drawablePadding="@dimen/_10sdp"
                            android:padding="@dimen/_5sdp"

                            android:text="I am Offering Room"
                            android:textSize="@dimen/_10sdp" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:background="#d8d8d8">

            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_15sdp">


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableLeft="@drawable/gender_icon"
                        android:textSize="@dimen/_12sdp" />

                    <RadioGroup
                        android:id="@+id/radioGroup2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:button="@android:color/transparent"
                            android:checked="true"
                            android:drawableLeft="@drawable/flat_selector"
                            android:drawablePadding="@dimen/_10sdp"
                            android:padding="@dimen/_5sdp"
                            android:text="Male"
                            android:textSize="@dimen/_10sdp" />

                        <RadioButton
                            android:id="@+id/radio4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@android:color/transparent"
                            android:drawableLeft="@drawable/flat_selector"
                            android:drawablePadding="@dimen/_10sdp"
                            android:padding="@dimen/_5sdp"
                            android:text="Female"
                            android:textSize="@dimen/_10sdp" />

                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:background="#d8d8d8">

            </View>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_15sdp">


                <EditText
                    android:paddingBottom="@dimen/_13sdp"
                    android:id="@+id/rent_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:drawableLeft="@drawable/currency_icon"
                    android:drawablePadding="@dimen/_5sdp"
                    android:hint="@string/Montrhlyamt"
                    android:imeOptions="actionNext"
                    android:background="@null"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:background="#d8d8d8">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_15sdp">

                <EditText

                    android:id="@+id/description_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:drawableLeft="@drawable/pro_icon"
                    android:drawablePadding="@dimen/_5sdp"
                    android:hint="@string/projectdescription"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:background="@null"
                    android:paddingBottom="@dimen/_13sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_13sdp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:background="#d8d8d8">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/_65sdp"
                android:paddingLeft="@dimen/_10sdp">

                <CheckBox
                    android:id="@+id/phone_enable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13sdp"
                    android:text="Display Phone No"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:background="#d8d8d8">
            </View>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyle"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:src="@drawable/submit_icon" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp">
        <include
            android:id="@+id/container_header_lyt"
            layout="@layout/footer_privacyplolicy1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        </include>

    </LinearLayout>

</LinearLayout>